--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "cypher-dto"
 description = "A collection of traits and macros for working Data Transfer Objects (DTOs) Cypher and Neo4j."
-version = "0.1.1"
+version = "0.2.0"
 edition = "2021"
 license = "MIT"
 keywords = ["neo4j", "cypher", "dto", "query", "graph"]
@@ -15,9 +15,9 @@ serde = ["macros", "cypher-dto-macros/serde"]
 
 [dependencies]
 chrono = "0.4"
-cypher-dto-macros = { version = "0.1.1", path = "../macros", optional = true }
-# neo4rs = "0.6.2"
-neo4rs = { version = "0.7.0-alpha.1", git = "https://github.com/neo4j-labs/neo4rs.git", rev = "0bd8099017d3ad57a844c9a456e7aaaca5e4721e" }
+cypher-dto-macros = { version = "0.2.0", path = "../macros", optional = true }
+neo4rs = "0.6.2"
+# neo4rs = { version = "0.7.0-alpha.1", git = "https://github.com/neo4j-labs/neo4rs.git", rev = "0bd8099017d3ad57a844c9a456e7aaaca5e4721e" }
 thiserror = "1.0"
 
 [dev-dependencies]
