--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -5,7 +5,7 @@ version = "0.2.0"
 edition = "2021"
 license = "MIT"
 keywords = ["neo4j", "cypher", "dto", "query", "graph"]
-categories = ["database", "data-structures", "encoding"]
+categories = ["database"]
 repository = "https://github.com/jifalops/cypher-dto"
 
 [features]
