--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -4,15 +4,14 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-chrono = "0.4.26"
+chrono = "0.4"
 cypher-dto = { path = "../lib" }
-# 0.7.0-alpha.1
-neo4rs = { git = "https://github.com/neo4j-labs/neo4rs.git", rev = "0bd8099017d3ad57a844c9a456e7aaaca5e4721e" }
+neo4rs = "0.7.1"
 
 [dev-dependencies]
 lenient_semver = { version = "0.4.2", features = ["version_lite"] }
-neo4j_testcontainers = "0.1.0"
 pretty_env_logger = "0.5.0"
-testcontainers = "0.14.0"
+testcontainers = "0.15.0"
+testcontainers-modules = { version = "0.3.4", features = ["neo4j"] }
 tokio = "1.29.1"
 uuid = { version = "1.4.1", features = ["v4"] }
