--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -7,6 +7,7 @@ license = "MIT"
 keywords = ["neo4j", "cypher", "dto", "query", "graph"]
 categories = ["database"]
 repository = "https://github.com/jifalops/cypher-dto"
+metadata.msrv = "1.60"
 
 [features]
 default = ["macros"]
@@ -14,17 +15,16 @@ macros = ["cypher-dto-macros"]
 serde = ["macros", "cypher-dto-macros/serde"]
 
 [dependencies]
-chrono = "0.4"
+chrono = { version = "0.4" }
 cypher-dto-macros = { version = "0.2.0", path = "../macros", optional = true }
-# neo4rs = "0.6.2"
-neo4rs = { version = "0.7.0-alpha.1", git = "https://github.com/neo4j-labs/neo4rs.git", rev = "0bd8099017d3ad57a844c9a456e7aaaca5e4721e" }
+neo4rs = "0.7.1"
 thiserror = "1.0"
 
 [dev-dependencies]
-tokio = "1.29.1"
 lenient_semver = { version = "0.4.2", features = ["version_lite"] }
-neo4j_testcontainers = "0.1.0"
 pretty_env_logger = "0.5.0"
-serde = { version = "1.0.174", features = ["derive"] }
-testcontainers = "0.14.0"
+serde = { version = "1.0", features = ["derive"] }
+testcontainers = "0.15.0"
+testcontainers-modules = { version = "0.3.4", features = ["neo4j"] }
+tokio = "1.29.1"
 uuid = { version = "1.4.1", features = ["v4"] }
