--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -11,7 +11,12 @@ services:
     volumes:
       - ..:/cypher-dto:cached
     environment:
+      PROJECT_ROOT: /cypher-dto
       GITHUB_TOKEN: ${GITHUB_TOKEN}
+      TZ: ${TZ}
+      NEO4J_TEST_URI: "bolt://db:7687"
+      NEO4J_TEST_USER: "neo4j"
+      NEO4J_TEST_PASS: "developer"
 
   db:
     image: neo4j:5
